{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 19,
  "lineage": "eb59d5c3-a0d6-9ce3-383e-34575d1281cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Sai",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:055843227276:instance/i-06747ecf840c37715",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06747ecf840c37715",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf188df159edc52a",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_ip": "10.0.1.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cc40c8f4ab6537a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a6ad9d665773b42",
            "tags": {
              "Name": "saipriya"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048a6c6c5553fa898"
            ]
          },
          "dependencies": [
            "aws_subnet.priya",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0982c4102d1fe1607",
            "owner_id": "055843227276",
            "tags": {
              "Name": "Internet"
            },
            "vpc_id": "vpc-0b5b22fbcd9485aee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "resource",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06151f6fac14e6c49",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.1.1/24",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0982c4102d1fe1607",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0b5b22fbcd9485aee"
          },
          "dependencies": [
            "aws_internet_gateway.Internet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055843227276:security-group/sg-0f50a59789df9500f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f50a59789df9500f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "055843227276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b22fbcd9485aee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priya",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055843227276:subnet/subnet-06a6ad9d665773b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06a6ad9d665773b42",
            "map_public_ip_on_launch": false,
            "owner_id": "055843227276",
            "tags": {
              "name": "subnet"
            },
            "vpc_id": "vpc-0b5b22fbcd9485aee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055843227276:vpc/vpc-0b5b22fbcd9485aee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a69a86b5eccae89",
            "default_route_table_id": "rtb-08ffe2aed65f04b5a",
            "default_security_group_id": "sg-048a6c6c5553fa898",
            "dhcp_options_id": "dopt-0f11b661a7f87dd84",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b5b22fbcd9485aee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ffe2aed65f04b5a",
            "owner_id": "055843227276",
            "tags": {
              "Name": "dev-acs-test"
            }
          }
        }
      ]
    }
  ]
}